<resources>
    <string name="app_name">Gatesbook</string>
    <string name="unitText">unitText</string>
    <string name="semester">semester</string>
    <string name="semester_subjects">semester subjects</string>
    <string name="share">share</string>
    <string name="faqs_feedback">faqs &amp; feedback</string>
    <string name="faq">FAQs</string>
    <string name="feedback">feedback</string>
    <string name="feature">Feature Request</string>
    <string name="report">report bug</string>
    <string name="support">support &amp; contribute</string>
    <string name="removeAds">removeAds</string>
    <string name="donate">donate</string>
    <string name="credits">credits</string>
    <string name="settings">Settings</string>
    <string name="creditText">credits will be updated soon</string>
    <string name="contribute">contribute to project</string>
    <string name="labText">labText</string>
    <string name="version"> Gatesbook v1.2</string>
    <string name="try_again">Try Again</string>
    <string name="oops_no_internet">OOPS! NO INTERNET</string>
    <string name="bartext">0MB</string>
</resources>