<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/midnight"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/EEE"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@color/midnight"
            android:scaleType="centerCrop"
            android:src="@drawable/eee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/CSE"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/MECH"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@color/midnight"
            android:scaleType="centerCrop"
            android:src="@drawable/mech"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/CIVIL"
            app:layout_constraintTop_toBottomOf="@+id/ECE"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/CIVIL"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@color/midnight"
            android:scaleType="centerCrop"
            android:src="@drawable/civil"
            app:layout_constraintEnd_toStartOf="@+id/MECH"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AI"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/AI"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@color/midnight"
            android:scaleType="centerCrop"
            android:src="@drawable/ai"
            app:layout_constraintEnd_toStartOf="@+id/ECE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CSE"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/CSE"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@color/midnight"
            android:scaleType="centerCrop"
            android:src="@drawable/cse"
            app:layout_constraintEnd_toStartOf="@+id/EEE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/ECE"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@color/midnight"
            android:scaleType="centerCrop"
            android:src="@drawable/ece"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/AI"
            app:layout_constraintTop_toBottomOf="@+id/EEE"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/DS"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@color/midnight"
            android:scaleType="centerCrop"
            android:src="@drawable/ds"
            app:layout_constraintEnd_toStartOf="@+id/cyber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CIVIL"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/cyber"
            android:layout_width="@dimen/_115sdp"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@color/midnight"
            android:scaleType="centerCrop"
            android:src="@drawable/cyber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/DS"
            app:layout_constraintTop_toBottomOf="@+id/MECH"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/midnight"
            android:src="@drawable/ic_baseline_menu_32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/noInternet"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/ic_baseline_signal_wifi_off_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.4"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/try_again"
            android:textColor="#0A1B36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noInternetText" />

        <TextView
            android:id="@+id/noInternetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/oops_no_internet"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noInternet" />

        <!--    <com.google.android.gms.ads.AdView-->
        <!--        android:id="@+id/adView"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_alignParentBottom="true"-->
        <!--        android:layout_centerHorizontal="true"-->
        <!--        android:layout_marginStart="32dp"-->
        <!--        app:adSize="BANNER"-->
        <!--        app:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>